syntax = "proto3";

option go_package = "github.com/kalpesh172000/gsaras/common/orders";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrders(GetOrderRequest) returns (GetOrderResponse) {}
}


message Order {
  int64 order_id = 1;
  int64 customer_id = 2;
  int64 product_id = 3;
  int64 quantity = 4;
}

message CreateOrderRequest {
  int64 customer_id = 1;
  int64 product_id = 2;
  int64 quantity = 3;
}

message CreateOrderResponse {
  string status =  1;
}

message GetOrderRequest {
  int64 customer_id = 1;
}

message GetOrderResponse {
  repeated Order orders = 1;
}


